syntax = "proto3";

package resource.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";

option go_package = "resource/api/resource/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.resource.v1";
option java_outer_classname = "resourceProtoV1";

service resourceService {
  //1. 列出全部资源
  rpc ListResources (ListResourcesReq) returns (ListResourcesReply) {
    option (google.api.http) = {
      get: "/v1/resources"
    };
  }
}

//=====================实体/值对象=======================
message Resource {
  int64  instance_id = 1;        //实例ID
  string name = 2;               //资源名称
  int64 user_id = 3;         //用户ID
  string type = 4;               //资源类型
  google.protobuf.Timestamp created_at = 5;        //创建时间
  google.protobuf.Timestamp updated_at = 6;        //更新时间
}

message ResourceSpec{
  int64 instance_id = 1;        //实例ID
  uint32 cpu_cores = 2;          //CPU核数
  uint32 memory_size = 3;        //内存大小(MB)
  uint32 gpu = 4;                //GPU种类
  string  image = 5;            //镜像
  optional google.protobuf.Struct custom_config = 6; //自定义配置
}

//1. 列出全部资源
message ListResourcesReq {
  optional int64 user_id = 1;         //用户ID
  optional google.protobuf.Timestamp start = 2; //创建时间在此之后
  optional google.protobuf.Timestamp end = 3;   //创建时间在此之前
  optional string type = 4;               //资源类型
  optional google.protobuf.FieldMask field_mask = 5; //字段掩码
}

message ListResourcesReply {
  repeated Resource resources = 1;
  map<string, ResourceSpec> specs = 2; //资源规格，key为instance_id
}

